gitignore file updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-*.o
+./Qt/build-SOP-Converter-Desktop-Debug/*.o
+./Qt/build-SOP-Converter-Desktop-Release/*.o
+./Qt/build-SOP-Converter-Desktop-Debug/moc_*
+./Qt/build-SOP-Converter-Desktop-Release/moc_*
